// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`service-entities-list Renders \`service-entities-list\` with custom props 1`] = `
<div>
  <div
    class="layout d-inline-flex my-1 align-center"
  >
    <input
      class="v-simple-checkbox ml-4 my-2"
      type="checkbox"
    />
    <transition-stub
      mode="out-in"
      name="fade-transition"
    >
      <span
        class="font-italic"
      >
        You can choose entities to perform actions
      </span>
    </transition-stub>
  </div>
  <div
    class="mt-2"
  >
    <service-entity-stub
      actionsrequests=""
      entity="[object Object]"
      entitynamefield="custom-entity-name"
      service-id="service-id"
      widgetparameters="[object Object]"
    />
  </div>
  <div
    class="mt-2"
  >
    <service-entity-stub
      actionsrequests=""
      entity="[object Object]"
      entitynamefield="custom-entity-name"
      service-id="service-id"
      widgetparameters="[object Object]"
    />
  </div>
  <!---->
</div>
`;

exports[`service-entities-list Renders \`service-entities-list\` with default props 1`] = `
<div>
  <!---->
  <!---->
</div>
`;

exports[`service-entities-list Renders \`service-entities-list\` with selected entities 1`] = `
<div>
  <div
    class="layout d-inline-flex my-1 align-center"
  >
    <input
      class="v-simple-checkbox ml-4 my-2"
      type="checkbox"
    />
    <transition-stub
      mode="out-in"
      name="fade-transition"
    >
      <service-entity-actions-stub
        actions="[object Object],[object Object]"
        assignedinstructions=""
        entity="[object Object]"
      />
    </transition-stub>
  </div>
  <div
    class="mt-2"
  >
    <service-entity-stub
      actionsrequests=""
      entity="[object Object]"
      entitynamefield="custom-entity-name"
      selected="true"
      service-id="service-id"
      widgetparameters="[object Object]"
    />
  </div>
  <div
    class="mt-2"
  >
    <service-entity-stub
      actionsrequests=""
      entity="[object Object]"
      entitynamefield="custom-entity-name"
      service-id="service-id"
      widgetparameters="[object Object]"
    />
  </div>
  <!---->
</div>
`;
